--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "development": "ng serve",
+    "development": "node server.js & ng serve --proxy-config proxy.config.json",
     "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
@@ -25,9 +25,12 @@
     "@angular/platform-browser": "~10.1.1",
     "@angular/platform-browser-dynamic": "~10.1.1",
     "@angular/router": "~10.1.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "nodemailer": "^6.4.11",
+    "nodemon": "^2.0.4",
     "path": "^0.12.7",
+    "process": "^0.11.10",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "typescript": "~4.0.2",
