--- a/proxy.config.json
+++ b/proxy.config.json
@@ -3,5 +3,15 @@
     "target":"http://localhost:8080",
     "secure":false,
     "logLevel":"debug"
+  },
+  "/sendall/":{
+    "target":"http://localhost:8080",
+    "secure":false,
+    "logLevel":"debug"
+  },
+  "/reps/":{
+    "target":"http://localhost:8080",
+    "secure":false,
+    "logLevel":"debug"
   }
 }
